<resources>
    <string name="app_name">傻孩志</string>
    <string name="applicationId">com.sillykid.app</string>
    <string name="loggingLoad">登录中&#8230;</string>
    <string name="sendingLoad">发送中&#8230;</string>
    <string name="dataLoad">数据加载中&#8230;</string>
    <string name="submissionLoad">提交中&#8230;</string>
    <string name="submitSuccess">提交成功！</string>
    <string name="crossLoad">上传中&#8230;</string>
    <string name="download">下载中&#8230;</string>
    <string name="shareJumpLoad">分享跳转中&#8230;</string>
    <string name="saveLoad">保存中&#8230;</string>
    <string name="paymentLoad">支付中&#8230;</string>
    <string name="cancelLoad">取消中&#8230;</string>
    <string name="deleteLoad">删除中&#8230;</string>
    <string name="addLoad">加入中&#8230;</string>
    <string name="imagePathError">图片路径错误</string>
    <string name="noData">没有数据</string>
    <string name="failedUploadPicture">上传图片失败，请重试</string>
    <string name="login">登录</string>
    <string name="number0">0123456789</string>
    <string name="alphanumeric">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789</string>
    <string name="accountNumber">帐号</string>
    <string name="accountErroe">帐号错误</string>
    <string name="hintAccountText">请输入号码</string>
    <string name="inputPhone">请输入正确的帐号</string>
    <string name="password">密码</string>
    <string name="passwordErroe">密码错误</string>
    <string name="hintPasswordText">请输入密码</string>
    <string name="hintPasswordText3">请输入确认密码</string>
    <string name="hintPasswordText4">请再次输入密码</string>
    <string name="hintPasswordText2">账号或密码错误</string>
    <string name="hintPasswordText1">密码为6～20位内的字母或数字,请正确填写</string>
    <string name="forgotPassword">忘记密码?</string>
    <string name="bindingAccount">绑定账号</string>
    <string name="bindingPhone">绑定手机号</string>
    <string name="bindingEmail">绑定邮箱号</string>
    <string name="binding">绑定</string>
    <string name="register">注册</string>
    <string name="noAccount">没有账号？</string>
    <string name="register1">立即注册</string>
    <string name="errorCode">请填写验证码</string>
    <string name="phone">手机号/邮箱</string>
    <string name="thirdpartylogin">第三方账号快捷登录</string>
    <string name="thirdqq">QQ</string>
    <string name="thirdweixin">微信</string>
    <string name="authorizationLoad">授权中&#8230;</string>
    <string name="authoriseErr">授权失败，请重试</string>
    <string name="authoriseErr1">您取消了授权</string>
    <string name="authoriseErr2">您还没有安装应用,请下载应用</string>
    <string name="authoriseErr3">没有安装应用</string>
    <string name="loginErr">登录失败，请重新登录</string>
    <string name="loginErr1">获取用户信息失败，请重新登录</string>
    <string name="failedCloudInformation">获取融云信息失败</string>
    <string name="failedCloudInformation1">获取融云信息失败,请用账号密码登录</string>
    <string name="selectCountry">选择国家或地区</string>
    <string name="registerPhone">手机号注册</string>
    <string name="hintPhoneText">请输入手机号</string>
    <string name="hintPhoneText1">请输入正确的手机号</string>
    <string name="registerMailBox">邮箱号注册</string>
    <string name="email">邮箱号</string>
    <string name="hintInvitationCode">请输入邀请码</string>
    <string name="hintEmailText">请输入邮箱号</string>
    <string name="hintEmailText1">请输入正确的邮箱号</string>
    <string name="hintPassword1Text">请输入您的密码</string>
    <string name="hintPassword2Text">请再次输入您的密码</string>
    <string name="resetpwd">重置密码成功，请登录！</string>
    <string name="confirmPassword">确认密码</string>
    <string name="referralcode">推荐码</string>
    <string name="referralcode1">请输入推荐码（可选）</string>
    <string name="pleasePasswordAgain">请再输入一遍密码</string>
    <string name="password3">请输入6～20位密码</string>
    <string name="testget">已发送</string>
    <string name="passwordMismatch">两次密码输入不一致</string>
    <string name="retrievePassword">找回密码</string>
    <string name="verificationCode">验证码</string>
    <string name="testGetCode">获取验证码</string>
    <string name="clickFinish">点击完成代表您同意</string>
    <string name="myagreement">点击注册即表示您同意</string>
    <string name="agreement">《傻孩志注册协议》</string>
    <string name="agreement1">傻孩志注册协议</string>
    <string name="determine">确定</string>
    <string name="forgotPassword1">忘记密码</string>
    <string name="retrievePhonePassword">手机号找回</string>
    <string name="retrieveEmailPassword">邮箱号找回</string>
    <string name="resetPassword">重置密码</string>
    <string name="operation_error">操作失败,请稍后再试</string>
    <string name="alipay_system_exception">支付系统异常</string>
    <string name="alipay_account_exception">此帐号绑定的支付宝账户被冻结或不允许支付</string>
    <string name="alipay_has_unbound">该用户已解除绑定</string>
    <string name="alipay_order_error">订单支付失败</string>
    <string name="alipay_order_cancel">您取消了支付</string>
    <string name="pay_error">支付失败</string>
    <string name="pay_network">网络连接异常</string>
    <string name="pay_result_confirmed">支付结果确认中</string>
    <string name="alipay_order_canceled">支付已取消</string>
    <string name="payment_succeed">恭喜您，支付成功！</string>
    <string name="alipay_succeed">支付成功</string>
    <string name="wxappinstalled">请先安装微信再进行支付</string>
    <string name="rechargeSuccess">充值成功</string>
    <string name="rechargeFailure">充值失败</string>
    <string name="readAndWrite">这款应用需要获取读写权限，才能使用</string>
    <string name="sdPermission">您拒绝了「SD卡读写权限」所需要的相关权限!请到「设置」开启权限</string>
    <string name="skip">跳过 ></string>
    <string name="experienceImmediately">立即体验</string>
    <string name="notOpenPositionSwitchClose">本应用需要结合定位功能使用，请点击按钮关闭应用，去打开定位开关后，重启应用即可正常使用</string>
    <string name="homePage">首页</string>
    <string name="message">消息</string>
    <string name="activity">活动</string>
    <string name="mall">商城</string>
    <string name="trip">出行</string>
    <string name="mine">我的</string>
    <string name="noDevelopment">功能开发中，敬请期待……</string>
    <string name="clickAgainExitProgram">再按一次退出程序</string>
    <string name="sillyChild">傻孩志</string>
    <string name="airportPickup">接机</string>
    <string name="boutiqueLine">精品线路</string>
    <string name="privateOrdering">私人订制</string>
    <string name="byTheDay">按天包车</string>
    <string name="airportDropOff">送机</string>
    <string name="hotRegion">热门地区</string>
    <string name="moreCities">更多城市</string>
    <string name="moreLines">更多线路</string>
    <string name="circuitProfileSummary">线路简介/摘要</string>
    <string name="travelCity">出行城市</string>
    <string name="localTalent">当地达人</string>
    <string name="popularStrategy">热门攻略</string>
    <string name="recentNews">最新动态</string>
    <string name="memberShowAll">查看全部</string>
    <string name="zan">赞</string>
    <string name="user">用户</string>
    <string name="inputDestination">输入目的地</string>
    <string name="locateFailure">定位失败</string>
    <string name="travelCity1">,请选择出行城市</string>
    <string name="travelCity2">请选择出行城市</string>
    <string name="locationRelatedPermission">您拒绝了「定位」所需要的相关权限!</string>
    <string name="notOpenPositionSwitch">未打开位置开关，可能导致定位失败或定位不准，请打开GPS</string>
    <string name="openPositionSwitch">定位选择需要以下权限:\n\n1.访问设备上的gps\n\n2.读写权限</string>
    <string name="moreClassification">更多分类</string>
    <string name="searchThousandsOverseasGoods">在万千海外商品中搜索</string>
    <string name="recentSearch">最近搜索</string>
    <string name="searchFound">搜索发现</string>
    <string name="commonlyClassification">常用分类</string>
    <string name="enterSearching">请输入您要搜索的商品</string>
    <string name="clearSearch">确定清空搜索</string>
    <string name="currentState">当前国家</string>
    <string name="currentLocation">GPS当前定位：</string>
    <string name="network_unavailable">网络连接不可用，请检查网络</string>
    <string name="user_already_exists">用户已经存在</string>
    <string name="no_register_authority">无开放注册权限</string>
    <string name="illegal_user_name">用户名不合法</string>
    <string name="register_user_fail">注册失败!</string>
    <string name="contact_customer_failure_seconed">联系客服</string>
    <string name="is_contact_customer_failure_seconed">联系客服失败:</string>
    <string name="system_is_regist">系统正在自动为您注册用户…</string>
    <string name="is_contact_customer">正在联系客服，请稍等…</string>
    <string name="visitors">访客</string>
    <string name="sillyChildCustomerService">傻孩志客服</string>
    <string name="toQuote">待后台输入报价</string>
    <string name="clickSeeDetails">点击查看详细信息</string>
    <string name="privatePseudoAgreement">private_order/</string>
    <string name="orderPseudoAgreement">once_order/</string>
    <string name="linePseudoAgreement">line/</string>
    <string name="unpaid">待下单</string>
    <string name="servicePrice">服务价格：</string>
    <string name="servicePrice1">订单价格：</string>
    <string name="touristNumber3">游客人数：</string>
    <string name="serviceDate1">服务日期：</string>
    <string name="goPayment">去付款</string>
    <string name="destination1">目的地：</string>
    <string name="charterDate1">包车日期：</string>
    <string name="specifyCompanyGuide1">指定司导：</string>
    <string name="seating">座位数：</string>
    <string name="customerName">客户姓名：</string>
    <string name="contactWay2">联系方式：</string>
    <string name="notAvailable">暂无</string>
    <string name="noti_text_expression">有新的消息</string>
    <string name="privateCustomizedInformation">私人定制信息</string>
    <string name="pickUpInformation">接机信息</string>
    <string name="flightNumber1">航班号：</string>
    <string name="pickUpAtAirport1">接机机场：</string>
    <string name="deliveredSite1">送达地点：</string>
    <string name="name1">姓名：</string>
    <string name="passengersNumber2">乘客人数：</string>
    <string name="departureTime1">预计出发时间：</string>
    <string name="bags1">行李数：</string>
    <string name="bags24">24寸行李箱</string>
    <string name="bags26">26寸行李箱</string>
    <string name="bags28">28寸行李箱</string>
    <string name="bags30">30寸行李箱</string>
    <string name="travelTime1">出行时间：</string>
    <string name="playNumberDays2">游玩天数：</string>
    <string name="travelPreferences1">出行偏好：</string>
    <string name="recommendRestaurant1">推荐餐馆：</string>
    <string name="recommendedAccommodation1">推荐住宿：</string>
    <string name="emptying">清空</string>
    <string name="sendMachineInformation">送机信息</string>
    <string name="deliveredAirport1">送达机场：</string>
    <string name="placeDeparture1">出发地点：</string>
    <string name="departureTime2">出发时间：</string>
    <string name="singleTransport1">单次接送信息</string>
    <string name="vehicleTime1">用车时间：</string>
    <string name="departureCity1">出发城市：</string>
    <string name="startingAddress">出发地址：</string>
    <string name="reachCity">送达城市：</string>
    <string name="reachAddress">送达地址：</string>
    <string name="numberTravel">出行人数</string>
    <string name="em_example1_text">古驰亮色夹克</string>
    <string name="em_example1_text_description">11月销量: 3399</string>
    <string name="em_example2_text">铂金女士手提袋</string>
    <string name="em_example2_text_description">11月销量: 20</string>
    <string name="em_example3_text">缪缪女士高跟鞋</string>
    <string name="em_example3_text_description">11月销量: 435</string>
    <string name="em_example4_text">卡地亚的一块手表</string>
    <string name="test_track_title1">轨迹消息1</string>
    <string name="test_track_title2">轨迹消息2</string>
    <string name="test_order_title1">订单消息1</string>
    <string name="cancel">取消</string>
    <string name="prompting">提示</string>
    <string name="idNumber">身份证号</string>
    <string name="fillIn">填写</string>
    <string name="authenticate">验证身份</string>
    <string name="pleaseEnterIdNumber">请输入证件号</string>
    <string name="determineClearCache">确定清除系统缓存</string>
    <string name="nextStep">下一步</string>
    <string name="invitationCode">邀请码</string>
    <string name="obligation">待付款</string>
    <string name="sendGoods">待发货</string>
    <string name="waitGoods">待收货</string>
    <string name="completed">已完成</string>
    <string name="afterSale">售后</string>
    <string name="all">全部</string>
    <string name="payment">确认付款</string>
    <string name="remindDelivery">提醒发货</string>
    <string name="confirmReceipt">确认收货</string>
    <string name="applyAfterSales">申请售后</string>
    <string name="appraiseOrder">评价订单</string>
    <string name="cancelOrder">取消订单</string>
    <string name="checkLogistics">查看物流</string>
</resources>