<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/MatchMatch"
    android:background="@color/background"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include layout="@layout/common_title" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen88"
        android:background="@color/whiteColors"
        android:gravity="center"
        android:orientation="horizontal">


        <TextView
            style="@style/WrapWrap"
            android:text="@string/fillIn"
            android:textColor="@color/textColor"
            android:textSize="@dimen/textsize17" />


        <TextView
            android:id="@+id/tv_name"
            style="@style/WrapWrap"
            android:layout_marginLeft="@dimen/dimen5"
            android:text="**"
            android:textColor="@color/titletextcolors"
            android:textSize="@dimen/textsize17" />

        <TextView
            style="@style/WrapWrap"
            android:layout_marginRight="@dimen/dimen5"
            android:text="@string/idNumber"
            android:textColor="@color/titletextcolors"
            android:textSize="@dimen/textsize17" />

        <TextView
            style="@style/WrapWrap"
            android:text="@string/authenticate"
            android:textColor="@color/textColor"
            android:textSize="@dimen/textsize17" />
    </LinearLayout>


    <EditText
        android:id="@+id/et_IdNumber"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen45"
        android:layout_marginTop="@dimen/dimen15"
        android:background="@color/whiteColors"
        android:digits="@string/alphanumeric"
        android:hint="@string/pleaseEnterIdNumber"
        android:inputType="number"
        android:maxLength="18"
        android:paddingLeft="@dimen/dimen15"
        android:paddingRight="@dimen/dimen15"
        android:singleLine="true"
        android:textColor="@color/titletextcolors"
        android:textColorHint="@color/hintColors"
        android:textCursorDrawable="@drawable/shape_cursor"
        android:textSize="@dimen/textsize15" />


    <TextView
        android:id="@+id/tv_nextStep"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen45"
        android:layout_marginLeft="@dimen/dimen15"
        android:layout_marginRight="@dimen/dimen15"
        android:layout_marginTop="@dimen/dimen20"
        android:background="@drawable/shape_login"
        android:gravity="center"
        android:text="@string/nextStep"
        android:textColor="@color/mainColor"
        android:textSize="@dimen/textsize16" />

</LinearLayout>