<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/MatchMatch"
    android:background="@color/background"
    android:orientation="vertical">

    <TextView
        style="@style/DividerWidth"
        android:layout_marginTop="@dimen/dimen15" />

    <LinearLayout
        style="@style/Match44"
        android:background="@color/whiteColors"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            style="@style/WrapWrap"
            android:layout_width="@dimen/dimen85"
            android:layout_marginLeft="@dimen/dimen15"
            android:text="@string/email"
            android:textColor="@color/textColor"
            android:textSize="@dimen/textsize15" />

        <EditText
            android:id="@+id/et_phone"
            style="@style/MatchMatch"
            android:layout_marginRight="@dimen/dimen15"
            android:background="@color/whiteColors"
            android:hint="@string/hintEmailText"
            android:digits="0123456789@ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijgklmnopqrstuvwxyz._-"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/hintColors"
            android:textCursorDrawable="@drawable/shape_cursor"
            android:textSize="@dimen/textsize15" />

    </LinearLayout>

    <TextView
        style="@style/DividerWidth"
        android:layout_marginLeft="@dimen/dimen15"
        android:layout_marginRight="@dimen/dimen15" />

    <LinearLayout
        style="@style/Match44"
        android:background="@color/whiteColors"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            style="@style/WrapWrap"
            android:layout_width="@dimen/dimen85"
            android:layout_marginLeft="@dimen/dimen15"
            android:text="@string/verificationCode"
            android:textColor="@color/textColor"
            android:textSize="@dimen/textsize15" />

        <EditText
            android:id="@+id/et_code"
            style="@style/AutoMatch"
            android:layout_marginRight="@dimen/dimen5"
            android:background="@color/whiteColors"
            android:hint="@string/errorCode"
            android:inputType="number"
            android:maxLength="8"
            android:textColorHint="@color/hintColors"
            android:textCursorDrawable="@drawable/shape_cursor"
            android:textSize="@dimen/textsize15" />

        <TextView
            android:id="@+id/tv_code"
            android:layout_width="@dimen/dimen75"
            android:layout_height="@dimen/dimen29"
            android:layout_marginRight="@dimen/dimen15"
            android:background="@drawable/shape_code"
            android:gravity="center"
            android:text="@string/testGetCode"
            android:textColor="@color/greenColors"
            android:textSize="@dimen/textsize12" />
    </LinearLayout>

    <TextView style="@style/DividerWidth" />

    <TextView
        android:id="@+id/tv_binding"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen45"
        android:layout_marginLeft="@dimen/dimen15"
        android:layout_marginRight="@dimen/dimen15"
        android:layout_marginTop="@dimen/dimen20"
        android:background="@drawable/shape_login1"
        android:gravity="center"
        android:text="@string/binding"
        android:textColor="@color/whiteColors"
        android:textSize="@dimen/textsize16" />

    <LinearLayout
        android:id="@+id/ll_agreement"
        style="@style/MatchWrap"
        android:layout_marginTop="@dimen/dimen15"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            style="@style/WrapWrap"
            android:text="@string/myagreement"
            android:textColor="@color/textColor"
            android:textSize="@dimen/textsize13" />

        <TextView
            android:id="@+id/tv_agreement"
            style="@style/WrapWrap"
            android:layout_marginLeft="@dimen/dimen3"
            android:text="@string/agreement"
            android:textColor="@color/greenColors"
            android:textSize="@dimen/textsize13" />
    </LinearLayout>

</LinearLayout>