<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/MatchMatch"
    android:background="@color/background"
    android:orientation="vertical">

    <TextView
        style="@style/DividerWidth"
        android:layout_marginTop="@dimen/dimen15" />

    <LinearLayout
        style="@style/Match44"
        android:background="@color/whiteColors"
        android:gravity="center_vertical"
        android:orientation="horizontal">


        <LinearLayout
            android:id="@+id/ll_areaCode"
            android:layout_width="@dimen/dimen84"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="@dimen/dimen15"
            android:paddingRight="@dimen/dimen10">

            <TextView
                android:id="@+id/tv_areaCode"
                style="@style/WrapWrap"
                android:paddingRight="@dimen/dimen7"
                android:singleLine="true"
                android:text="+86"
                android:textColor="@color/textColor"
                android:textSize="@dimen/textsize15" />

            <ImageView
                style="@style/WrapWrap"
                android:src="@mipmap/icon_down" />

        </LinearLayout>

        <TextView
            style="@style/DividerHeight"
            android:layout_marginBottom="@dimen/dimen10"
            android:layout_marginTop="@dimen/dimen10" />


        <EditText
            android:id="@+id/et_phone"
            style="@style/MatchMatch"
            android:layout_marginLeft="@dimen/dimen15"
            android:layout_marginRight="@dimen/dimen15"
            android:background="@color/whiteColors"
            android:digits="0123456789"
            android:hint="@string/hintPhoneText"
            android:inputType="phone"
            android:maxLength="11"
            android:textColorHint="@color/hintColors"
            android:textCursorDrawable="@drawable/shape_cursor"
            android:textSize="@dimen/textsize15" />

    </LinearLayout>

    <TextView
        style="@style/DividerWidth"
        android:layout_marginLeft="@dimen/dimen15"
        android:layout_marginRight="@dimen/dimen15" />

    <LinearLayout
        style="@style/Match44"
        android:background="@color/whiteColors"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            style="@style/WrapWrap"
            android:layout_width="@dimen/dimen85"
            android:layout_marginLeft="@dimen/dimen15"
            android:text="@string/verificationCode"
            android:textColor="@color/textColor"
            android:textSize="@dimen/textsize15" />


        <EditText
            android:id="@+id/et_code"
            style="@style/AutoMatch"
            android:layout_marginRight="@dimen/dimen5"
            android:background="@color/whiteColors"
            android:hint="@string/errorCode"
            android:inputType="number"
            android:maxLength="8"
            android:textColorHint="@color/hintColors"
            android:textCursorDrawable="@drawable/shape_cursor"
            android:textSize="@dimen/textsize15" />

        <TextView
            android:id="@+id/tv_code"
            android:layout_width="@dimen/dimen75"
            android:layout_height="@dimen/dimen29"
            android:layout_marginRight="@dimen/dimen15"
            android:background="@drawable/shape_code"
            android:gravity="center"
            android:text="@string/testGetCode"
            android:textColor="@color/greenColors"
            android:textSize="@dimen/textsize12" />
    </LinearLayout>

    <include layout="@layout/common_dividerwidth" />

    <LinearLayout
        android:id="@+id/ll_invitationCode"
        style="@style/Match44"
        android:background="@color/whiteColors"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            style="@style/WrapWrap"
            android:layout_width="@dimen/dimen85"
            android:layout_marginLeft="@dimen/dimen15"
            android:text="@string/invitationCode"
            android:textColor="@color/textColor"
            android:textSize="@dimen/textsize15" />

        <EditText
            android:id="@+id/et_invitationCode"
            style="@style/MatchMatch"
            android:layout_marginRight="@dimen/dimen15"
            android:background="@color/whiteColors"
            android:digits="0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijgklmnopqrstuvwxyz"
            android:hint="@string/hintInvitationCode"
            android:inputType="text"
            android:textColorHint="@color/hintColors"
            android:textCursorDrawable="@drawable/shape_cursor"
            android:textSize="@dimen/textsize15" />

    </LinearLayout>


    <include layout="@layout/common_dividerwidth" />

    <LinearLayout
        android:id="@+id/ll_pwd"
        style="@style/Match44"
        android:background="@color/whiteColors"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            style="@style/WrapWrap"
            android:layout_width="@dimen/dimen85"
            android:layout_marginLeft="@dimen/dimen15"
            android:text="@string/password"
            android:textColor="@color/textColor"
            android:textSize="@dimen/textsize15" />


        <EditText
            android:id="@+id/et_pwd"
            style="@style/MatchMatch"
            android:layout_marginRight="@dimen/dimen15"
            android:background="@color/whiteColors"
            android:hint="@string/hintPassword1Text"
            android:inputType="textPassword"
            android:maxLength="20"
            android:password="true"
            android:singleLine="true"
            android:textColorHint="@color/hintColors"
            android:textCursorDrawable="@drawable/shape_cursor"
            android:textSize="@dimen/textsize15" />

    </LinearLayout>


    <include layout="@layout/common_dividerwidth" />

    <LinearLayout
        style="@style/Match44"
        android:background="@color/whiteColors"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            style="@style/WrapWrap"
            android:layout_width="@dimen/dimen85"
            android:layout_marginLeft="@dimen/dimen15"
            android:text="@string/confirmPassword"
            android:textColor="@color/textColor"
            android:textSize="@dimen/textsize15" />


        <EditText
            android:id="@+id/et_pwd1"
            style="@style/MatchMatch"
            android:layout_marginRight="@dimen/dimen15"
            android:background="@color/whiteColors"
            android:hint="@string/hintPassword2Text"
            android:inputType="textNoSuggestions"
            android:maxLength="20"
            android:password="true"
            android:singleLine="true"
            android:textColorHint="@color/hintColors"
            android:textCursorDrawable="@drawable/shape_cursor"
            android:textSize="@dimen/textsize15" />

    </LinearLayout>

    <TextView style="@style/DividerWidth" />

    <TextView
        android:id="@+id/tv_registe"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen45"
        android:layout_marginLeft="@dimen/dimen15"
        android:layout_marginRight="@dimen/dimen15"
        android:layout_marginTop="@dimen/dimen20"
        android:background="@drawable/shape_login1"
        android:gravity="center"
        android:text="@string/register"
        android:textColor="@color/whiteColors"
        android:textSize="@dimen/textsize16" />

    <LinearLayout
        android:id="@+id/ll_agreement"
        style="@style/MatchWrap"
        android:layout_marginTop="@dimen/dimen15"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            style="@style/WrapWrap"
            android:text="@string/myagreement"
            android:textColor="@color/textColor"
            android:textSize="@dimen/textsize13" />

        <TextView
            android:id="@+id/tv_agreement"
            style="@style/WrapWrap"
            android:layout_marginLeft="@dimen/dimen3"
            android:text="@string/agreement"
            android:textColor="@color/greenColors"
            android:textSize="@dimen/textsize13" />
    </LinearLayout>

</LinearLayout>